feat: Add target and rel attributes to "Learn more" link for improved security and usability

--- a/src/app/pages/premium/premium.component.html
+++ b/src/app/pages/premium/premium.component.html
@@ -17,7 +17,7 @@
       </div>
       <p>
         <br />
-        <a href="https://www.nostria.app/premium" mat-flat-button>Learn more</a>
+        <a href="https://www.nostria.app/premium" target="_blank" rel="noopener noreferrer" mat-flat-button>Learn more</a>
       </p>
     </div>
   </div>
