--- a/src/app/pages/lists/lists.component.html
+++ b/src/app/pages/lists/lists.component.html
@@ -51,10 +51,10 @@
                 <mat-icon>edit</mat-icon>
                 Edit
               </button>
-              <button mat-button color="warn" (click)="deleteList(list)">
+              <!-- <button mat-button color="warn" (click)="deleteList(list)">
                 <mat-icon>delete</mat-icon>
                 Delete
-              </button>
+              </button> -->
               } @else {
               <button mat-raised-button color="primary" (click)="createList(listType)">
                 <mat-icon>add</mat-icon>
@@ -124,10 +124,10 @@
                   <mat-icon>edit</mat-icon>
                   Edit
                 </button>
-                <button mat-button color="warn" (click)="deleteList(set)">
+                <!-- <button mat-button color="warn" (click)="deleteList(set)">
                   <mat-icon>delete</mat-icon>
                   Delete
-                </button>
+                </button> -->
               </mat-card-actions>
             </mat-card>
             }
