--- a/src/app/pages/lists/lists.component.html
+++ b/src/app/pages/lists/lists.component.html
@@ -103,7 +103,7 @@
                 <mat-icon mat-card-avatar>{{ listType.icon }}</mat-icon>
                 }
                 <mat-card-title>{{ set.title || 'Untitled Set' }}</mat-card-title>
-                <mat-card-subtitle>{{ set.identifier }}</mat-card-subtitle>
+                <mat-card-subtitle [title]="set.identifier">{{ set.identifier }}</mat-card-subtitle>
               </mat-card-header>
 
               <mat-card-content>
