feat: Comment out mentions section and border styles in tagged references component

--- a/src/app/components/content/tagged-references/tagged-references.component.html
+++ b/src/app/components/content/tagged-references/tagged-references.component.html
@@ -51,7 +51,7 @@
 
 
   <!-- User Mentions -->
-  @if (mentions().length > 0) {
+  <!-- @if (mentions().length > 0) {
   <div class="mentions-section">
     <span class="mentions-label">Mentioned: </span>
     <div class="mentions-list">
@@ -63,7 +63,7 @@
       }
     </div>
   </div>
-  }
+  } -->
 
 
 </div>
