--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -274,7 +274,7 @@
         <button mat-menu-item (click)="layout.shareProfile(this.npub(), this.name())">
           <span>Profile</span>
         </button>
-        <button mat-menu-item (click)="layout.shareProfileUrl(this.npub())">
+        <button mat-menu-item (click)="layout.shareProfileUrl(this.npub(), this.profileUsername())">
           <span>Profile URL</span>
         </button>
       </mat-menu>
