--- a/src/app/components/content/note-content/note-content.component.html
+++ b/src/app/components/content/note-content/note-content.component.html
@@ -18,7 +18,18 @@
   <img [src]="token.content" alt="Content image" loading="lazy" (click)="openImageDialog(token.content)"
     class="clickable-image" />
 </div>
+} @else if (token.type === 'base64-image') {
+<div class="media-container">
+  <img [src]="token.content" alt="Embedded image" (click)="openImageDialog(token.content)" class="clickable-image" />
+</div>
 } @else if (token.type === 'audio') {
+<div class="media-container">
+  <audio controls>
+    <source [src]="token.content" />
+    Your browser does not support the audio element.
+  </audio>
+</div>
+} @else if (token.type === 'base64-audio') {
 <div class="media-container">
   <audio controls>
     <source [src]="token.content" />
@@ -48,6 +59,13 @@
     </div>
   </div>
   }
+</div>
+} @else if (token.type === 'base64-video') {
+<div class="media-container">
+  <video controls>
+    <source [src]="token.content" />
+    Your browser does not support the video element.
+  </video>
 </div>
 } @else if (
 token.type === 'nostr-mention' &&
