--- a/src/app/components/event-types/article-event.component.html
+++ b/src/app/components/event-types/article-event.component.html
@@ -1,58 +1,75 @@
 @if (hasContentWarning()) {
-  <div class="content-warning">
-    <mat-icon>warning</mat-icon>
-    <span>{{ contentWarning() }}</span>
-  </div>
+<div class="content-warning">
+  <mat-icon>warning</mat-icon>
+  <span>{{ contentWarning() }}</span>
+</div>
 }
 
 <article class="article-container">
   @if (title()) {
-    <h3
-      class="article-title clickable"
-      (click)="openFullArticle()"
-      (keydown.enter)="openFullArticle()"
-      (keydown.space)="openFullArticle()"
-      tabindex="0"
-      role="button"
-      [attr.aria-label]="'Open article: ' + title()"
-    >
-      {{ title() }}
-    </h3>
+  <h3 class="article-title clickable" (click)="openFullArticle()" (keydown.enter)="openFullArticle()"
+    (keydown.space)="openFullArticle()" tabindex="0" role="button" [attr.aria-label]="'Open article: ' + title()">
+    {{ title() }}
+  </h3>
   }
 
   @if (authorName() || publishedAt()) {
-    <div class="article-meta">
-      @if (authorName()) {
-        <span class="article-author">{{ authorName() }}</span>
-      }
-      @if (publishedAt()) {
-        <span class="article-date">{{ publishedAt() | date: 'mediumDate' }}</span>
-      }
-    </div>
+  <div class="article-meta">
+    @if (authorName()) {
+    <span class="article-author">{{ authorName() }}</span>
+    }
+    @if (publishedAt()) {
+    <span class="article-date">{{ publishedAt() | date: 'mediumDate' }}</span>
+    }
+  </div>
   }
 
   @if (summary()) {
-    <p class="article-summary">{{ summary() }}</p>
+  <p class="article-summary">{{ summary() }}</p>
   }
 
   <div class="article-content">
+    @if (isJsonContent()) {
+    <div class="json-content">
+      @if (jsonData(); as data) {
+      @if (getObjectKeys(data).length > 0) {
+      <div class="json-object">
+        @for (key of getObjectKeys(data); track key) {
+        <div class="json-property">
+          <span class="json-key">{{ key }}</span>
+          <span class="json-separator">:</span>
+          @if (isPrimitive(getObjectValue(data, key))) {
+          <span class="json-value">{{ formatJsonValue(getObjectValue(data, key)) }}</span>
+          } @else {
+          <pre class="json-complex-value">{{ stringifyValue(getObjectValue(data, key)) }}</pre>
+          }
+        </div>
+        }
+      </div>
+      } @else {
+      <pre class="json-raw">{{ stringifyValue(data) }}</pre>
+      }
+      }
+    </div>
+    } @else {
     <div class="markdown-content" [innerHTML]="contentToShow()"></div>
+    }
   </div>
 
   @if (articleTags().length > 0) {
-    <div class="article-tags">
-      @for (tag of articleTags(); track tag) {
-        <span class="tag-chip">#{{ tag }}</span>
-      }
-    </div>
+  <div class="article-tags">
+    @for (tag of articleTags(); track tag) {
+    <span class="tag-chip">#{{ tag }}</span>
+    }
+  </div>
   }
 
   <div class="article-actions">
     @if (isLongArticle()) {
-      <button mat-button color="primary" class="read-more" (click)="expandContent()">
-        <mat-icon>{{ isExpanded() ? 'expand_less' : 'expand_more' }}</mat-icon>
-        {{ isExpanded() ? 'Show Less' : 'Read More' }}
-      </button>
+    <button mat-button color="primary" class="read-more" (click)="expandContent()">
+      <mat-icon>{{ isExpanded() ? 'expand_less' : 'expand_more' }}</mat-icon>
+      {{ isExpanded() ? 'Show Less' : 'Read More' }}
+    </button>
     }
 
     <button mat-button color="primary" (click)="openFullArticle()" class="open-article">
